--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carved Rock Fitness</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
@@ -58,7 +59,7 @@
         <div class="jumbotron jumbotron-fluid crf-hero d-flex">
             <div class="container d-flex flex-column justify-content-center align-items-sm-stretch align-items-md-center">
                 <h1 id="message" class="col-sm-12">GET A GRIP</h1>
-                <h2>20% OFF</h2>
+                <h2 id="percent-off">20% OFF</h2>
                 <p class="lead">THROUGHOUT THE SEASON</p>
             </div>
         </div>
@@ -120,9 +121,14 @@
                         <h4>Trail Review</h4>
                         <div>Asphalt</div>
                         <div>National Park</div>
-                        <a class="btn btn-default" href="#">See Review</a>
+                        <a id="see-review" class="btn btn-default" href="#">See Review</a>
                     </div>
                 </div>
+            </div>
+            <!-- will be visible when pressing the btn above. "d-none" is display:none with bootstrap -->
+            <div id="review" class="container d-none">
+                <h4>Review Title...</h4>
+                <p>Review text...</p>
             </div>
         </div>
 
